[package]
name = "qmdb"
version = "0.2.0"
edition = "2021"
description = "A high-performance verifiable key-value store, designed to optimize blockchain state storage."
repository = "https://github.com/LayerZero-Labs/qmdb"
authors = ["LayerZero Labs Research"]
license = "MIT OR Apache-2.0"


[[example]]
name = "v1_fuzz"
path = "examples/v1_fuzz/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = { version = "0.10.9", features = ["asm", "asm-aarch64", "sha2-asm"] }
lazy_static = "1.5.0"
hex = "0.4.3"
anyhow = "1.0.98"
byteorder = "1.5.0"
xxhash-rust = { version = "0.8.15", features = ["xxh32", "xxh3"] }
threadpool = "1.8.1"
atomptr = "2.0.0"
rand_core = { version = "0.9.3" }
time = "0.3.41"
rayon = "1.10.0"
dashmap = "6.1.0"
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
blake2 = "0.10.6"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
hpfile = { path = "../hpfile" }
rs_merkle = "1.5.0"
aes-gcm = "0.10.3"
aead = "0.5.2"
generic-array = "1.2.0"
log = "0.4.27"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { version = "0.7.2", optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.0", optional = true }

[dev-dependencies]
serial_test = "3.1.1"
memory-stats = "1.2.0"
rocksdb = "0.22.0"

[features]
default = ["tikv-jemallocator"]
check_rec = []
use_hybridindexer = []
check_hybridindexer = []
profiling_hybridindexer = []
tee_cipher = []
directio = ["io-uring"]
hpfile_all_in_mem = ["hpfile/all_in_mem"]
in_sp1 = []
slow_hashing = []
